tests/policy/deployment-labeled-pods.yaml
apiVersion: apps/v1beta2 
kind: Deployment
metadata:
  name: busybox-deployment
  labels:
    project: test-polic 
spec:
  replicas: 30
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: busybox
        image: busybox
        command:
          - sleep
          - "3600"
