tests/policy/deployment-policy-pods.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: iperf-server-deployment
  labels:
    app: iperf
spec:
  replicas: 1
  selector:
    matchLabels:
      role: db
      app: webapp
  template:
    metadata:
      labels:
        role: db
        app: webapp
    spec:
      containers:
      - image: networkstatic/iperf3
        imagePullPolicy: IfNotPresent
        name: iperf-server
        ports:
        - containerPort: 8000
        command: ["iperf3"]
        args: ["-V4d", "-s", "-p", "8000"]
        securityContext:
          privileged: true
